adding github action

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,6 +1,6 @@
 services: 
   api:
-    image: moebnaser/fastapi
+    build: .
     depends_on:
       postgres:
         condition: service_healthy
