--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -7,15 +7,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Pulling git repo
-        uses: actions/checkout@v6
-      - name: say hi
+        uses: actions/checkout@v4
+
+      - name: Say hi
         run: echo "hello world"
+
       - name: Setting up Python
-        uses: actions/setup-python@v6
+        uses: actions/setup-python@v5
         with:
           python-version: '3.13'
+
       - name: Update pip
         run: python -m pip install --upgrade pip
+
       - name: Installing all dependencies
         run: pip install -r requirements.txt
-
