--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -9,9 +9,6 @@ jobs:
       - name: Pulling git repo
         uses: actions/checkout@v4
 
-      - name: Say hi
-        run: echo "hello world"
-
       - name: Setting up Python
         uses: actions/setup-python@v5
         with:
@@ -22,3 +19,8 @@ jobs:
 
       - name: Installing all dependencies
         run: pip install -r requirements.txt
+
+      - name: Running tests (pytest)
+        run: |
+          pip install pytest
+          pytest -v -s
