--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -4,19 +4,20 @@ on: [push, pull_request]
 
 jobs:
   job1:
+    runs-on: ubuntu-latest
     environment:
       name: CICD ENV
-    env:
-      DATABASE_HOSTNAME: ${{DATABASE_HOSTNAME}}
-      DATABASE_PORT:  ${{DATABASE_PORT}}
-      DATABASE_PASSWORD: ${{DATABASE_PASSWORD}}
-      DATABASE_NAME: ${{DATABASE_NAME}}
-      DATABASE_USERNAME: ${{DATABASE_USERNAME}}
-      SECRET_KEY: ${{SECRET_KEY}}
-      ALGORITHM: ${{ALGORITHM}}
-      ACCESS_TOKEN_EXPIRE_MINUTES: ${{ACCESS_TOKEN_EXPIRE_MINUTES}}
 
-    runs-on: ubuntu-latest
+    env:
+      DATABASE_HOSTNAME: ${{ secrets.DATABASE_HOSTNAME }}
+      DATABASE_PORT: ${{ secrets.DATABASE_PORT }}
+      DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+      DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
+      DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
+      SECRET_KEY: ${{ secrets.SECRET_KEY }}
+      ALGORITHM: ${{ secrets.ALGORITHM }}
+      ACCESS_TOKEN_EXPIRE_MINUTES: ${{ secrets.ACCESS_TOKEN_EXPIRE_MINUTES }}
+
     steps:
       - name: Pulling git repo
         uses: actions/checkout@v4
