--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -3,7 +3,7 @@ name: Build and Deploy
 on: [push, pull_request]
 
 jobs:
-  job1:
+  build:
     runs-on: ubuntu-latest
 
     services:
@@ -74,6 +74,26 @@ jobs:
           cache-to: type=local,dest=/tmp/.buildx-cache
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest}}
+
+  deploy: 
+    environment: 
+      name: Production
+ 
+    runs-on: ubuntu-latest
+    needs: [build]
+
+    steps: 
+      - name: Pulling git repo
+        uses: actions/checkout@v4
+
+      - name: Deploying to Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with: 
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
+
+
 
 
 
