--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -75,23 +75,28 @@ jobs:
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest}}
 
-  deploy: 
-    environment: 
-      name: Production
- 
-    runs-on: ubuntu-latest
-    needs: [build]
+deploy:
+  environment:
+    name: Production
 
-    steps: 
-      - name: Pulling git repo
-        uses: actions/checkout@v4
+  runs-on: ubuntu-latest
+  needs: [build]
 
-      - name: Deploying to Heroku
-        uses: akhileshns/heroku-deploy@v3.12.12
-        with: 
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
+  steps:
+    - name: Checkout repo
+      uses: actions/checkout@v4
+
+    - name: Install Heroku CLI
+      run: |
+        curl https://cli-assets.heroku.com/install.sh | sh
+
+    - name: Deploy to Heroku
+      uses: akhileshns/heroku-deploy@v3.12.12
+      with:
+        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+        heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+        heroku_email: ${{ secrets.HEROKU_EMAIL }}
+
 
 
 
