--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -97,6 +97,18 @@ jobs:
           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
           heroku_email: ${{ secrets.HEROKU_EMAIL }}
 
+      - name: Deploy to ubunto server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{secrets.UBUNTO_HOST}}
+          username: ${{secrets.UBUNTO_USERNAME}}
+          password: ${{secrets.UBUNTO_PASSWORD}}
+          steps: |
+            cd app/src
+            git pull
+            sudo systemctl restart api
+
+
 
 
 
