--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -98,15 +98,16 @@ jobs:
           heroku_email: ${{ secrets.HEROKU_EMAIL }}
 
       - name: Deploy to ubuntu server
-        uses: appleboy/ssh-action@v0.1.10
+        uses: appleboy/ssh-action@master
         with:
-        host: ${{ secrets.UBUNTU_HOST }}
-        username: ${{ secrets.UBUNTU_USERNAME }}
-        key: ${{ secrets.UBUNTU_SSH_KEY }}
-        script: |
-          cd app/src
-          git pull
-          sudo systemctl restart api
+          host: ${{ secrets.UBUNTU_HOST }}
+          username: ${{ secrets.UBUNTU_USERNAME }}
+          password: ${{ secrets.UBUNTU_PASSWORD }}
+          script: |
+            cd app/src
+            git pull
+            echo "${{ secrets.UBUNTU_PASSWORD }}" | sudo -S systemctl restart api
+
 
 
 
